--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -19,6 +19,7 @@ def versions = [
     sqldelight          : '1.5.3',
     truth               : '1.1.3',
     ktor                : '1.6.7',
+    gradleEmbeddedKotlin: '1.5.31',
 ]
 
 ext.versions = versions
@@ -95,9 +96,9 @@ ext.dep = [
     uuid                     : "com.benasher44:uuid:0.3.1",
     benManesVersions         : "com.github.ben-manes:gradle-versions-plugin:0.33.0",
     gr8                      : "com.gradleup:gr8-plugin:0.4",
-    kspGradlePlugin_1_6_21   : "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.6.21-1.0.5",
+    kspGradlePlugin_1_7_0    : "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.7.0-Beta-1.0.5",
     kspGradlePlugin_1_6_10   : "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.6.10-1.0.2",
-    kotlinxdatetime          : "org.jetbrains.kotlinx:kotlinx-datetime:0.3.1",
+    kotlinxdatetime          : "org.jetbrains.kotlinx:kotlinx-datetime:0.3.3",
     kotlinxserializationjson : "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2",
     atomicfu                 : "org.jetbrains.kotlinx:atomicfu:0.17.0",
     ktor                     : [
@@ -123,7 +124,7 @@ ext.dep = [
     // See https://youtrack.jetbrains.com/issue/KTIJ-21583/HMPP:-1.6.20-breaks-autocomplete-in-multiplatform-composite-buil#focus=Comments-27-6022244.0-0
     kotlinPluginDuringIdeaSync: "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10",
     // The main kotlin version for build-logic and Gradle tests
-    kotlinPlugin: "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21",
+    kotlinPlugin: "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0-Beta",
     // Used by the Apollo Gradle plugin because the Kotlin plugin is in the buildscript classpath already so there's no need to
     // specify the version
     kotlinPluginWithoutVersion: "org.jetbrains.kotlin:kotlin-gradle-plugin",
